syntax = "proto3";
package printspool_protobufs;

// Combinators send ServerMessages
message InviteCode {
  bytes secret = 1;
  bytes host_public_key = 2;
}
